set(Voyager_SRCS)
set(Voyager_LINKER_LIBS pthread)

add_subdirectory(util)
add_subdirectory(port)
add_subdirectory(core)
if (BUILD_HTTP)
  add_subdirectory(http)
endif()

if(BUILD_SHARED_LIBS)
  add_library(voyager SHARED ${Voyager_SRCS})
  add_library(voyager_static STATIC ${Voyager_SRCS})    
  set_target_properties(voyager_static PROPERTIES OUTPUT_NAME "voyager")    
  set_target_properties(voyager PROPERTIES CLEAN_DIRECT_OUTPUT ${VOYAGER_VERSION_MAJOR})   
  set_target_properties(voyager_static PROPERTIES CLEAN_DIRECT_OUTPUT ${VOYAGER_VERSION_MAJOR})    
  set_target_properties(voyager PROPERTIES VERSION ${VOYAGER_VERSION_STRING} SOVERSION ${VOYAGER_VERSION_MAJOR})
  target_link_libraries(voyager ${Voyager_LINKER_LIBS})
  install(TARGETS voyager DESTINATION lib)
  install(TARGETS voyager_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
else()
  add_library(voyager ${Voyager_SRCS})
  target_link_libraries(voyager ${Voyager_LINKER_LIBS})
  install(TARGETS voyager DESTINATION lib)
endif()

find_package(Protobuf)
if (PROTOBUF_FOUND)
  add_subdirectory(rpc)
endif()
