add_executable(atomic_test atomic_test.cc)
add_executable(thread_test thread_test.cc)
add_executable(singleton_test singleton_test.cc)
add_executable(blockingqueue_test blockingqueue_test.cc)

target_link_libraries(atomic_test mirants_port)
target_link_libraries(thread_test mirants_port)
target_link_libraries(singleton_test mirants_port)
target_link_libraries(blockingqueue_test mirants_port)
